--- a/templates/default/init-mysql.conf.erb
+++ b/templates/default/init-mysql.conf.erb
@@ -3,7 +3,7 @@
 description     "MySQL Server"
 author          "Mario Limonciello <superm1@ubuntu.com>"
 
-#start on runlevel [2345]
+start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
 respawn
