savegame: converging server-55-omnios-151006

--- a/templates/default/omnios/mysql.xml.erb
+++ b/templates/default/omnios/mysql.xml.erb
@@ -18,7 +18,7 @@
         <loctext xml:lang='C'>MySQL RDBMS</loctext>
       </common_name>
       <documentation>
-        <manpage title='MySQL 5.5' section='1'/>
+        <manpage title='MySQL <%= @version %>' section='1'/>
         <doc_link name='mysql.com' uri='http://dev.mysql.com/docs'/>
       </documentation>
     </template>
