Integration tests failing. Mysql client has wrong socket config. Rendering it into the template causes an ordering error with the initial converge. Since the default socket file is in the data_dir, moving /var/lib/mysql/* isn't going to cut it. We're going to have to go higher resolution on the policy.

--- a/templates/default/5.0/my.cnf.erb
+++ b/templates/default/5.0/my.cnf.erb
@@ -2,7 +2,7 @@
 <% if @port %>
 port                           = <%= @port %>
 <% end %>
-<% if @socket %>
+<% if @socket_file %>
 socket                         = <%= @socket_file %>
 <% end %>
 
