--- a/templates/default/5.1/my.cnf.erb
+++ b/templates/default/5.1/my.cnf.erb
@@ -2,7 +2,7 @@
 <% if @port %>
 port                           = <%= @port %>
 <% end %>
-<% if @socket %>
+<% if @socket_file %>
 socket                         = <%= @socket_file %>
 <% end %>
 
