Added workaround for pid file path for my.cnf template for ubuntu

--- a/templates/default/apparmor/usr.sbin.mysqld.erb
+++ b/templates/default/apparmor/usr.sbin.mysqld.erb
@@ -33,7 +33,7 @@
   <%= node['mysql']['data_dir'] %>/** rwk,
   /var/log/mysql/ r,
   /var/log/mysql/* rw,
-  /var/run/mysqld/mysqld.pid w,
+  /var/run/mysql/mysql.pid w,
   /var/run/mysqld/mysqld.sock w,
 
   /sys/devices/system/cpu/ r,
