set attributes for user, pass, and cookbook for user .my.cnf file

--- a/templates/default/user-my.cnf.erb
+++ b/templates/default/user-my.cnf.erb
@@ -1,6 +1,6 @@
 [mysql]
-user=root
-password=<%=node['rackspace_mysql']['server_root_password']%>
+user=<%= @user %>
+password=<%= @pass %>
 [client]
-user=root
-password=<%=node['rackspace_mysql']['server_root_password']%>
+user=<%= @user %>
+password=<%= @pass %>
