Support parameters configuration for mysqld

--- a/templates/default/5.5/my.cnf.erb
+++ b/templates/default/5.5/my.cnf.erb
@@ -32,6 +32,10 @@ tmpdir                         = /tmp
 lc-messages-dir                = <%= @lc_messages_dir %>
 <% end %>
 
+<% node[:mysql][:tunable].each do |key, value| %>
+<%= key %> = <%= value %>
+<% end %>
+
 [mysql]
 <% if @include_dir %>
 !includedir <%= @include_dir %>
