--- a/templates/default/5.6/my.cnf.erb
+++ b/templates/default/5.6/my.cnf.erb
@@ -34,7 +34,7 @@ tmpdir                         = /tmp
 <% if @lc_messages_dir %>
 lc-messages-dir                = <%= @lc_messages_dir %>
 <% end %>
-sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
+sql_mode=NO_ENGINE_SUBSTITUTION
 <% if @enable_utf8 %>
 collation-server               = utf8_general_ci
 init-connect                   = 'SET NAMES utf8'
