--- a/templates/default/apparmor/usr.sbin.mysqld.erb
+++ b/templates/default/apparmor/usr.sbin.mysqld.erb
@@ -1,5 +1,5 @@
 # vim:syntax=apparmor
-# Last Modified: Tue Jun 19 17:37:30 2007
+# Last Modified: Tue Feb 09 15:28:30 2016
 #include <tunables/global>
 
 /usr/sbin/mysqld {
@@ -9,38 +9,59 @@
   #include <abstractions/mysql>
   #include <abstractions/winbind>
 
-  capability dac_override,
+# Allow system resource access
+  /sys/devices/system/cpu/ r,
   capability sys_resource,
-  capability setgid,
+  capability dac_override,
   capability setuid,
+  capability setgid,
 
+# Allow network access
   network tcp,
 
   /etc/hosts.allow r,
   /etc/hosts.deny r,
 
-  /etc/mysql/*.pem r,
-  /etc/mysql/conf.d/ r,
-  /etc/mysql/conf.d/* r,
-  /etc/mysql/*.cnf r,
-  /usr/lib/mysql/plugin/ r,
-  /usr/lib/mysql/plugin/*.so* mr,
-  /usr/sbin/mysqld mr,
-  /usr/share/mysql/** r,
-  /var/log/mysql.log rw,
-  /var/log/mysql.err rw,
-  /var/lib/mysql/ r,
-  /var/lib/mysql/** rwk,
-  /var/log/mysql/ r,
-  /var/log/mysql/* rw,
+# Allow config access
+  /etc/mysql/** r,
+
+# Allow pid, socket, socket lock file access
   /var/run/mysqld/mysqld.pid rw,
-  /var/run/mysqld/mysqld.sock w,
+  /var/run/mysqld/mysqld.sock rw,
   /var/run/mysqld/mysqld.sock.lock rw,
   /run/mysqld/mysqld.pid rw,
-  /run/mysqld/mysqld.sock w,
+  /run/mysqld/mysqld.sock rw,
   /run/mysqld/mysqld.sock.lock rw,
 
-  /sys/devices/system/cpu/ r,
+# Allow execution of server binary
+  /usr/sbin/mysqld mr,
+  /usr/sbin/mysqld-debug mr,
+
+# Allow plugin access
+  /usr/lib/mysql/plugin/ r,
+  /usr/lib/mysql/plugin/*.so* mr,
+
+# Allow error msg and charset access
+  /usr/share/mysql/ r,
+  /usr/share/mysql/** r,
+
+# Allow data dir access
+  /var/lib/mysql/ r,
+  /var/lib/mysql/** rwk,
+
+# Allow data files dir access
+  /var/lib/mysql-files/ r,
+  /var/lib/mysql-files/** rwk,
+
+# Allow keyring dir access
+  /var/lib/mysql-keyring/ r,
+  /var/lib/mysql-keyring/** rwk,
+
+# Allow log file access
+  /var/log/mysql.err rw,
+  /var/log/mysql.log rw,
+  /var/log/mysql/ r,
+  /var/log/mysql/** rw,
 
   # Site-specific additions and overrides. See local/README for details.
   #include <local/usr.sbin.mysqld>
