--- a/templates/default/systemd/mysqld.service.erb
+++ b/templates/default/systemd/mysqld.service.erb
@@ -7,10 +7,15 @@ After=network.target
 Type=simple
 User=<%= @config.run_user %>
 Group=<%= @config.run_group %>
+PermissionsStartOnly=true
+ExecStartPre=/usr/share/mysql/mysql-systemd-start pre
+
 ExecStart=<%= @mysqld_bin %> --defaults-file=<%= @etc_dir %>/my.cnf --basedir=<%= @base_dir %>
-ExecStartPost=/usr/libexec/<%= @config.mysql_name %>-wait-ready $MAINPID
+ExecStartPost=<%= @mysql_systemd %>
 TimeoutSec=300
-PrivateTmp=true
+Restart=on-failure
+RuntimeDirectory=mysqld
+RuntimeDirectoryMode=755
 
 [Install]
 WantedBy=multi-user.target
