Fix installation and testing on Ubuntu 18.04 bionic, EL7, Fedora and Opensuse Also: - attempt to fix many of the tests that run in travis-ci - Fix seemingly all the systemd-based installations by not deleting the default my.cnf file - rename the mysql_test cookbook to test - fix many test failures on fedora, rhel7 and opensuse - rebase and squash a dozen different commits into one
Signed-off-by: Irving Popovetsky <irving@chef.io>

--- a/templates/default/systemd/mysqld.service.erb
+++ b/templates/default/systemd/mysqld.service.erb
@@ -8,7 +8,7 @@ Type=simple
 User=<%= @config.run_user %>
 Group=<%= @config.run_group %>
 PermissionsStartOnly=true
-ExecStartPre=/usr/share/mysql/mysql-systemd-start pre
+ExecStartPre=<%= @mysql_systemd_start_pre %>
 
 ExecStart=<%= @mysqld_bin %> --defaults-file=<%= @etc_dir %>/my.cnf --basedir=<%= @base_dir %>
 ExecStartPost=<%= @mysql_systemd %>
