Whitelist /etc/mysql/mysql.conf.d for the Oracle MySQL package.

--- a/templates/default/apparmor/ubuntu-14.04/usr.sbin.mysqld.erb
+++ b/templates/default/apparmor/ubuntu-14.04/usr.sbin.mysqld.erb
@@ -22,6 +22,8 @@
   /etc/mysql/*.pem r,
   /etc/mysql/conf.d/ r,
   /etc/mysql/conf.d/* r,
+  /etc/mysql/mysql.conf.d/ r,
+  /etc/mysql/mysql.conf.d/* r,
   /etc/mysql/*.cnf r,
   /usr/lib/mysql/plugin/ r,
   /usr/lib/mysql/plugin/*.so* mr,
