Don't allow /* rw if config.tmp_dir is nil or empty string. Yikes.

--- a/templates/default/apparmor/usr.sbin.mysqld-instance.erb
+++ b/templates/default/apparmor/usr.sbin.mysqld-instance.erb
@@ -11,4 +11,6 @@
 <%= @config.socket_file %> rw,
 /tmp/<%= @mysql_name %>/ r,
 /tmp/<%= @mysql_name %>/my.sql r,
+<% if @config.tmp_dir %>
 <%= @config.tmp_dir %>/* rw,
+<% end %>
