--- a/test/cookbooks/test/templates/default/replication-slave.erb
+++ b/test/cookbooks/test/templates/default/replication-slave.erb
@@ -3,3 +3,4 @@ log_error = /var/log/mysql-<%= @mysql_instance %>/error.log
 relay-log = /var/log/mysql-<%= @mysql_instance %>/mysql-relay-bin.log
 server-id = <%= @server_id %>
 replicate-ignore-db = mysql
+port = <%= @port || '3306' %>
